--- a/FirstCoreWebApplicationMVC/appsettings.json
+++ b/FirstCoreWebApplicationMVC/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MyCustomKey": "MyCustomKey Value coming from appsettings.json"
 }
